--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
         <div class="icon__batteries vehicle-container__icon"></div>
       </div>
       <div class="caption">
-        <img class="caption__pic" src="/images/info-svgrepo-com.svg">
+        <img class="caption__pic" src="/images/info-svgrepo-com.svg" alt="Фото трактора">
         <p class="caption__text"></p>
       </div>
 
       </div>
-    </div>
+
 
 
   </section>
