feat: reviews, map, new tractor pic

--- a/index.html
+++ b/index.html
@@ -124,6 +124,23 @@
     </div>
   </section>
 
+  <!-- Review section -->
+  <section class="review">
+    <div class="section-intro">
+      <h2 class="section-intro__title">Причины обращаться к нам</h2>
+      <p class="section-intro__subtitle">
+        Высокое качество и скорость выполнения работ. Множество положительных отзывов
+      </p>
+      <div class="section-intro__dash"></div>
+    </div>
+    <div class="review__widget" style="width: 760px;height:700px;overflow:hidden;position:relative;"><iframe
+        style="width:100%;height:100%;border:1px solid #e6e6e6;border-radius:8px;box-sizing:border-box"
+        src="https://yandex.ru/maps-reviews-widget/226327670406?comments"></iframe><a
+        href="https://yandex.uz/maps/org/muzei_zapovednik_izmailovo/226327670406/" target="_blank"
+        style="box-sizing:border-box;text-decoration:none;color:#b3b3b3;font-size:10px;font-family:YS Text,sans-serif;padding:0 20px;position:absolute;bottom:8px;width:100%;text-align:center;left:0;overflow:hidden;text-overflow:ellipsis;display:block;max-height:14px;white-space:nowrap;padding:0 16px;box-sizing:border-box">Музей-заповедник
+        Измайлово на карте Москвы — Яндекс Карты</a></div>
+  </section>
+
   <!-- Expert team section -->
 
   <section class="experts">
@@ -249,9 +266,19 @@
 
   <!-- Find us section -->
   <section class="find-us">
-    <iframe class="find-us__map"
-      src="https://yandex.ru/map-widget/v1/?um=constructor%3A93169cbb288e2f8f985e57fc556a187c4bc9bc7aeeb7c30b1a8ba2e372918833&amp;source=constructor"
-      width="100%" height="400" frameborder="0"></iframe>
+    <div style="position:relative;overflow:hidden;"><a
+        href="https://yandex.uz/maps/org/muzei_zapovednik_izmailovo/226327670406/?utm_medium=mapframe&utm_source=maps"
+        style="color:#eee;font-size:12px;position:absolute;top:0px;">Музей-заповедник Измайлово</a><a
+        href="https://yandex.uz/maps/213/moscow/category/museum/184105894/?utm_medium=mapframe&utm_source=maps"
+        style="color:#eee;font-size:12px;position:absolute;top:14px;">Музей в Москве</a><a
+        href="https://yandex.uz/maps/213/moscow/category/landmark_attraction/89683368508/?utm_medium=mapframe&utm_source=maps"
+        style="color:#eee;font-size:12px;position:absolute;top:28px;">Достопримечательность в Москве</a><iframe
+        src="https://yandex.uz/map-widget/v1/-/CCUjv4EeoA" width="100%" height="500" frameborder="0"
+        allowfullscreen="true" style="position:relative;"></iframe></div>
+
+  </section>
+  <!-- Footer section starts-->
+  <footer class="footer">
     <div class="contacts">
       <div class="contacts__item">
         <img class="contacts__icon" src="./images/map.svg" alt="">
@@ -278,8 +305,74 @@
         </div>
       </div>
     </div>
-  </section>
+    <div class="footer__wrapper">
+      <div class="footer__about-us">
+        <h3 class="footer__subtitle">О нас</h3>
+        <div class="section-intro__dash section-intro__dash_footer"></div>
+        <p class="footer__paragraph">Бронницы Бояркино</p>
+        <p class="footer__paragraph">17 километр, д. 15</p>
+        <ul class="footer__list-container">
+          <li class="footer__list">
+            <p class="footer__paragraph">Телефон: </p>
+            <p class="footer__paragraph">+7 (925) 000 00 00</p>
+          </li>
+          <li class="footer__list">
+            <p class="footer__paragraph">Email: </p>
+            <p class="footer__paragraph footer__paragraph_info">web-tractor@mail.com</p>
+          </li>
+          <li class="footer__list">
+            <p class="footer__paragraph">Помощь: </p>
+            <p class="footer__paragraph">+7 (495) 577 27 10</p>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__our-services">
+        <h3 class="footer__subtitle">Наши услуги</h3>
+        <div class="section-intro__dash section-intro__dash_footer"></div>
+        <ul class="footer__list-container">
+          <li class="footer__paragraph">Масло и фильтры</li>
+          <li class="footer__paragraph">Ремни и шланги</li>
+          <li class="footer__paragraph">Кондиционирование воздуха</li>
+        </ul>
+      </div>
+      <div class="footer__hours">
+        <h3 class="footer__subtitle">Часы работы</h3>
+        <div class="section-intro__dash section-intro__dash_footer"></div>
+        <ul class="footer__list-container">
+          <li class="footer__list">
+            <p class="footer__paragraph">Понедельник</p>
+            <p class="footer__paragraph">7:30 - 17:30</p>
+          </li>
+          <li class="footer__list">
+            <p class="footer__paragraph">Вторник</p>
+            <p class="footer__paragraph">7:30 - 17:30</p>
+          </li>
+          <li class="footer__list">
+            <p class="footer__paragraph">Среда</p>
+            <p class="footer__paragraph">7:30 - 17:30</p>
+          </li>
+          <li class="footer__list">
+            <p class="footer__paragraph">Четверг</p>
+            <p class="footer__paragraph">7:30 - 17:30</p>
+          </li>
+          <li class="footer__list">
+            <p class="footer__paragraph">Пятница</p>
+            <p class="footer__paragraph">7:30 - 17:30</p>
+          </li>
+          <li class="footer__list">
+            <p class="footer__paragraph">Суббота</p>
+            <p class="footer__paragraph">10:00 - 17:00</p>
+          </li>
+          <li class="footer__list">
+            <p class="footer__paragraph">Воскресенье</p>
+            <p class="footer__paragraph">Выходной</p>
+          </li>
+        </ul>
+      </div>
+    </div>
 
+
+  </footer>
 
 
   <script src="./script-js/script.js"></script>
