--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
   <script src="./script-js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="./script-js/swiper-services.js"></script>
-  <script src="./script-js/swiper.js"></script>
+  <script src="./script-js/swiper-experts.js"></script>
 </body>
 
 </html>
